components/janitor-bot/tests/snapshots/integration__workflow__ci-success.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - close_issue
    dry_run: false
    name: manage-github-workflow
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/issues?state=open&q=%5BGitHub+CI%5D+Accurate0%2Finf-k8s+CI+failed&type=issues
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/9001/comments
    body:
      body: "## Resolved\n\n| Detail | Value |\n|--------|-------|\n| Result | `success` |\n| Run | [#43 (attempt 1)](https://github.com/Accurate0/inf-k8s/actions/runs/9002) |\n| Commit | [`def456a`](https://github.com/Accurate0/inf-k8s/commit/def456abc789) — fix: actually fix it |\n"
      updated_at: ~
    service: forgejo
  - method: PATCH
    path: /api/v1/repos/anurag/k8s/issues/9001
    body:
      assignee: ~
      assignees: ~
      body: ~
      due_date: ~
      milestone: ~
      ref: ~
      state: closed
      title: ~
      unset_due_date: ~
      updated_at: ~
    service: forgejo
